fixed log details template overflow

--- a/static/main.css
+++ b/static/main.css
@@ -103,7 +103,6 @@ input.login-form-input {
 }
 
 .main-container {
-    height: 100%;
     padding: 0 5px;
     display: flex;
     justify-content: center;
